hphp/test/slow/method-undefined-pgo.php.expectf
Fatal error: Call to undefined method DoesNotHaveFoo::foo1() in %s on line 21
